<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/oldLace"
    tools:context=".RecordDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/card_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:src="@drawable/ic_image_black"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/rosyBrown"/>
        
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="2">

            <TableRow>
                <TextView
                    android:id="@+id/description_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="4"
                    android:gravity="center_horizontal"
                    android:padding="12dp"
                    android:text="@string/description_field"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/title_textView"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/title_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/title_field"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/category_field"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/category_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/selected_category"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/location_editText"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/location_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/location_field"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/mood_field"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/mood_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/mood_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/date_created"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/addedDate_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/added_date"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/date_updated"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/updatedDate_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/modified_date"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

        </TableLayout>
    </LinearLayout>
</ScrollView>